properly use @import with scss partials
Command @import is a css command which will load references file using
a separate HTTP request. We do not want that, but also do not want to
use sprocket, as we want scss variable/mixins used between files, which
Sprocket does not allow, Sprocket combines files after they have been
compiled.

On the other hand scss @import command will do exactly what we want,
providing including file does not have the css extension included, but
only the scss extension.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -1,7 +1,8 @@
-/*
-*= require_tree ./includes
-*/
-
+// @import "includes/angular-multi-select";
+// @import "includes/animate";
+// @import "includes/css-spinner";
+// @import "includes/daterangepicker-bs3";
+@import "includes/*";
 @import "bootstrap-sprockets";
 @import "bootstrap";
 @import "mn-config";
