!important is no more needed
Due to changes in the previous commit we can ommit the !important,
the padding is applied correctly.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -27,7 +27,7 @@
   // uncomment this line to add green color to multiSelect
   //@extend .btn-success;
   .buttonLabel{
-    padding: 0 !Important;
+    padding: 0;
   }
 }
 
