mnf grid editing fields heigh fix
Mnf grid editing fields now have lower height and are not causing row or text to jump in "edit" state.

Signed-off-by: Filip Kunjadić - Ćulibrk <filip.kunjadic@pixel2go.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -80,6 +80,20 @@ a.navbar-brand {
   .table > thead > tr.mn-grid-header > th {
     border-bottom: none;
   }
+
+  .mnf-grid-field-editing {
+    padding-top: 1px;
+    input, .multiSelect button, .btn{
+      height: 26px;
+      padding: 5px 12px;
+      margin-top: 1px;
+      line-height: 1;
+      }
+      .glyphicon{
+          margin-top: -1px;
+      }
+  }
+
   .mn-grid-data-row {
     height: 45px;
     .input-sm {
