more space added to action icon in mnf grid
Signed-off-by: Filip Kunjadić - Ćulibrk <filip.kunjadic@pixel2go.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -94,6 +94,10 @@ a.navbar-brand {
       }
   }
 
+  .glyphicon{
+    padding: 0 10px;
+  }
+
   .mn-grid-data-row {
     height: 45px;
     .input-sm {
