input-sm class returned to css since its part of bootstrap
Signed-off-by: Filip Kunjadić - Ćulibrk <filip.kunjadic@pixel2go.com>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -96,6 +96,9 @@ a.navbar-brand {
 
   .mn-grid-data-row {
     height: 45px;
+    .input-sm {
+      margin-top: -8px;
+    }
     .btn-link {
       padding-bottom: 0px;
     }
