mn-filter-bar transluding content
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html.haml
+++ b/app/assets/javascripts/app/routes/orders-index.html.haml
@@ -2,6 +2,9 @@
   .row
     .col-xs-9
       %mn-filter-bar
+        %mn-filter-selector(seleted-document-filters="filterBar.seletedDocumentFilters")
+        %mn-filter-bar-date-selector(date-from="filterBar.dateFrom")
+        %mn-filter-bar-multi-selector(selected-statuses="filterBar.selectedStatuses")
     .col-xs-3
       %a.btn.btn-primary(href='#/orders/new') New Order
       %a.btn(href='#/special-orders') Special Orders
