--- a/app/assets/javascripts/mohican/directives/mn-filter-bar/template.html.haml
+++ b/app/assets/javascripts/mohican/directives/mn-filter-bar/template.html.haml
@@ -1,10 +1,10 @@
 .row
   .col-xs-12.btn-toolbar
     %form.form-inline
-      %mn-filter-selector(seleted-document-filters="filterBar.seletedDocumentFilters")
-      %mn-filter-bar-date-selector(date-from="filterBar.dateFrom")
-      %mn-filter-bar-multi-selector(selected-statuses="filterBar.selectedStatuses")
-      %button.btn.btn-primary(ng-click="filterBar.changeDocumentFilter()") Change
+      .row
+        .col-xs-8.mn-translude
+        .col-xs-4
+          %button.btn.btn-primary(ng-click="filterBar.changeDocumentFilter()") Change
 .row
   .col-xs-12.btn-toolbar
     .primary.pull-left(button-label="show" helper-elements=""
