mn-grid actions aligned
It really looks cool. Actions were a bit higher, and this fix aligns
them with the other tds, although they overwrite the original
padding-top which is 8 - only 5 more should have been added.

Signed-off-by: zeljko <zeljko@z-ware.fi>

--- a/app/assets/stylesheets/mohican/mohican.css.scss
+++ b/app/assets/stylesheets/mohican/mohican.css.scss
@@ -102,6 +102,9 @@ a.navbar-brand {
     .btn-link {
       padding-bottom: 0px;
     }
+    td.mn-grid-actions-td {
+      padding-top: 13px;
+    }
   }
 
   .mnf-grid-field-ready {
