mn-filter-bar-date-selector refactoring
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html.haml
+++ b/app/assets/javascripts/app/routes/orders-index.html.haml
@@ -3,7 +3,7 @@
     .col-xs-9
       %mn-filter-bar
         %mn-fb-document-filter-selector
-        %mn-fb-date-selector(field='dateFrom')
+        %mn-fb-date-selector(field='delivery_date')
         %mn-fb-multi-selector(field='status')
     .col-xs-3
       %a.btn.btn-primary(href='#/orders/new') New Order
