declare mn-filter-bar's selector labels
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/mohican/directives/mn-filter-bar-date-selector/template.html.haml
+++ b/app/assets/javascripts/mohican/directives/mn-filter-bar-date-selector/template.html.haml
@@ -1,6 +1,6 @@
 .form-group
   %label.pull-left(for="date-from"
-                   style="margin-top: 5px;") Delivery date from
+                   style="margin-top: 5px;") {{filterBarDateSelector.label}}
   %p.input-group.input-group-sm(style="margin: 0;")
     %input#date-from.form-control(close-text="Close"
                                   datepicker-popup="dd.MM.yyyy."
