--- a/app/assets/javascripts/mohican/directives/mn-filter-bar-multi-selector/template.html.haml
+++ b/app/assets/javascripts/mohican/directives/mn-filter-bar-multi-selector/template.html.haml
@@ -5,6 +5,6 @@
         input-model="filterBarMultiSelector.selectValues"
         isteven-multi-select=""
         item-label="name"
-        output-model="filterBarMultiSelector.selectedStatus"
+        output-model="filterBarMultiSelector.selectedValues"
         tick-property="selected"
         translation="filterBarMultiSelector.selectValuesLabels")
