protractor funcitonal test
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/menu.html.haml
+++ b/app/assets/javascripts/app/menu.html.haml
@@ -9,7 +9,7 @@
     %mn-qr.navbar-nav.pull-right.menu-bar-trigger-1
     %a.navbar-brand(href='/#/begin')
   %mn-qr.navbar-nav.navbar-right.menu-bar-trigger-2
-  %button.navbar-right.mns-navbar.btn(mns-button='30' style='width: 200px;')
+  %button#notification-button.navbar-right.mns-navbar.btn(mns-button='30' style='width: 200px;')
   / Collect the nav links, forms, and other content for toggling
   .collapse.navbar-collapse(collapse='navCollapsed')
     %ul.nav.navbar-nav
