show-new-button filter-bar parameter
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/orders-index.html.haml
+++ b/app/assets/javascripts/app/routes/orders-index.html.haml
@@ -1,7 +1,7 @@
 .container-fluid
   .row
     .col-xs-12
-      %mn-filter-bar
+      %mn-filter-bar(show-new-button="true")
         %mn-fb-document-filter-selector
         %mn-fb-date-selector(field='delivery_date'
                              label='Delivery Date')
