mnf-preview-grid: remove unnecessary param
Signed-off-by: Aleksandar Djindjic <djindjic@gmail.com>

--- a/app/assets/javascripts/app/routes/special-orders-index.html.haml
+++ b/app/assets/javascripts/app/routes/special-orders-index.html.haml
@@ -18,7 +18,7 @@
                  mn-popup='ctrl.popup(clickedItem, selectedItems)'
                  mn-select='multiple'
                  mn-select-type='check')
-          %mnf-preview-grid.hidden-xs(mnf-doc='item' route='orders')
+          %mnf-preview-grid.hidden-xs(mnf-doc='item')
           %mnf-edit-grid.hidden-xs(mnf-doc='item')
           %mnf-commit-grid.hidden-xs(mnf-doc='item')
           %mnf-rollback-grid.hidden-xs(mnf-doc='item')
