--- a/app/assets/javascripts/app/routes/lines-index.html.haml
+++ b/app/assets/javascripts/app/routes/lines-index.html.haml
@@ -14,4 +14,4 @@
                  mn-popup='ctrl.popup(clickedItem, selectedItems)'
                  mn-select='multiple'
                  mn-select-type='check')
-          %mnf-preview-grid.hidden-xs(mnf-doc='item' route='lines')
+          %mnf-preview-grid.hidden-xs(mnf-doc='item')
