--- a/app/assets/javascripts/app/routes/orders-index.html.haml
+++ b/app/assets/javascripts/app/routes/orders-index.html.haml
@@ -3,6 +3,8 @@
     .col-xs-12
       %mn-filter-bar(show-new-button="true")
         %mn-fb-document-filter-selector
+        -# %mn-fb-date-selector(field='delivery_date'
+        -#                      label='Delivery Date')
         %mn-fb-date-range-selector(field='delivery_date'
                                    label='Delivery Date')
         %mn-fb-multi-selector(field='status'
